[package]
name = "currency_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_loader = { git = "https://github.com/vlad-onis/dotenv_loader", version = "0.1.0"}
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.93"
serde = {version = "1", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }
thiserror = "1.0.38"
chrono = "0.4.23"